--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div class="flex-container">
+  <app-header></app-header>
+  <div class="main">
+    <app-talents-page></app-talents-page>
+  </div>
+  <app-footer></app-footer>
+</div>
