--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,13 @@
 <div class="nav">
-  {{ title }}
+  <div class="list">
+    <div class="left">
+      <i class="material-icons">plus_one</i>
+    </div>
+    <div class="center">
+      {{ title }}
+    </div>
+    <div class="right">
+  <!--    right-->
+    </div>
+  </div>
 </div>
